--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: python
 
+services:
+  - redis-server
+
 python:
   - "2.7"
 
@@ -15,4 +18,7 @@ before_install:
 
 install: "pip install -r requirements.txt"
 
-script: python manage.py test
+script: 
+  - "celery -A starwars worker --loglevel=info -D"
+  - "python manage.py test"
+  - "ps auxww | grep 'celery worker' | awk '{print $2}' | xargs kill -9"
