--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ neo4jrestclient==2.1.1
 -e git+https://github.com/RenanPalmeira/neodjango/#egg=neodjango-master
 nose==1.3.7
 pytz==2015.7
+redis==2.10.5
 requests==2.9.1
 six==1.10.0
 wsgiref==0.1.2
